kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-deployment

spec:
  type: NodePort

  selector:
    app: nginx-deployment

  ports:
    - port: 80
      targetPort: 80
